--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="/data/js/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
     <title>Home | Rendani</title>
 </head>
 <body>
     <nav>
-        <a class="nav-link animate__animated animate__fadeIn" href="/" aria-label="Home">
+        <a class="nav-link" href="/" aria-label="Home">
             <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
         </a>
-        <div class="nav-menu animate__animated animate__fadeIn">
+        <div class="nav-menu">
             <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
             <a class="nav-link" href="/pages/blog/">Blog</a>
         </div>
@@ -24,171 +23,89 @@
     </nav>
     <hr>
 
-    <h2 style="text-align: center;" class="animate__animated animate__bounceIn">Welcome to My Creative Space</h2>
+    <h2 style="text-align: center;">Welcome</h2>
 
-    <!-- Static Content Section -->
     <div id="dynamic-content" style="text-align: center; margin: 20px;">
-        <div class="quote-container animate__animated animate__fadeIn" style="margin-bottom: 30px;">
-            <h3>Inspirational Quote</h3>
-            <p id="static-quote" style="font-style: italic; margin: 20px;">
-                "The only way to do great work is to love what you do."
+        <h3>Connect With Me</h3>
+        <div style="margin: 20px auto; max-width: 400px; text-align: left;">
+            <p style="margin: 10px 0;">
+                <span style="display: inline-block; width: 80px;">Blog:</span>
+                <a href="/pages/blog/" class="nav-link"><i class="fas fa-blog"></i> My Blog</a>
             </p>
-            <p style="color: #666;">- Steve Jobs</p>
+            <p style="margin: 10px 0;">
+                <span style="display: inline-block; width: 80px;">X:</span>
+                <a href="https://twitter.com/callmerendani" target="_blank" class="nav-link"><i class="fab fa-twitter"></i> @callmerendani</a>
+            </p>
+            <p style="margin: 10px 0;">
+                <span style="display: inline-block; width: 80px;">GitHub:</span>
+                <a href="https://github.com/manugeni" target="_blank" class="nav-link"><i class="fab fa-github"></i> @manugeni</a>
+            </p>
+            <p style="margin: 10px 0;">
+                <span style="display: inline-block; width: 80px;">LinkedIn:</span>
+                <a href="https://linkedin.com/in/rendani-manugeni" target="_blank" class="nav-link"><i class="fab fa-linkedin"></i> /in/rendani-manugeni</a>
+            </p>
         </div>
+    </div>
 
-        <!-- Random Image Gallery -->
-        <div class="image-gallery" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 20px;">
-            <img src="/api/placeholder/400/300" alt="Placeholder 1" style="width: 100%; border-radius: 10px;" class="animate__animated animate__fadeIn">
-            <img src="/api/placeholder/400/300" alt="Placeholder 2" style="width: 100%; border-radius: 10px;" class="animate__animated animate__fadeIn">
-            <img src="/api/placeholder/400/300" alt="Placeholder 3" style="width: 100%; border-radius: 10px;" class="animate__animated animate__fadeIn">
-        </div>
+    <hr>
 
-        <!-- Random Facts Section -->
-        <div class="facts-container animate__animated animate__fadeIn" style="margin: 30px 0;">
-            <h3>Fun Facts</h3>
-            <div id="facts-display" style="margin: 20px;">
+    <div id="favorites" style="text-align: center; margin: 20px;">
+        <h3>My Favorites</h3>
+        <div style="margin: 20px auto; max-width: 600px;">
+            <h4>Games</h4>
+            <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/EA_Sports_FC_Mobile_Logo.svg/1200px-EA_Sports_FC_Mobile_Logo.svg.png" alt="FC Mobile Logo" style="width: 100px; height: 100px;">
+                    <p>FC Mobile</p>
+                </div>
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/en/5/5a/Need_for_Speed_Most_Wanted_2012_box_art.jpg" alt="Need for Speed 2012 Logo" style="width: 100px; height: 100px;">
+                    <p>Need for Speed 2012</p>
+                </div>
+            </div>
+
+            <h4>Tools</h4>
+            <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Unreal_Engine_Logo.svg" alt="Unreal Engine Logo" style="width: 100px; height: 100px;">
+                    <p>Unreal Engine</p>
+                </div>
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Sketchfab_logo.svg/1280px-Sketchfab_logo.svg.png" alt="Sketchfab Logo" style="width: 100px; height: 100px;">
+                    <p>Sketchfab</p>
+                </div>
+                <div>
+                    <img src="https://seeklogo.com/images/D/deepseek-logo-5E58FE67A2-seeklogo.com.png" alt="Deepseek Logo" style="width: 100px; height: 100px;">
+                    <p>Deepseek</p>
+                </div>
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest Logo" style="width: 100px; height: 100px;">
+                    <p>Pinterest</p>
+                </div>
             </div>
         </div>
     </div>
 
     <hr>
+
     <footer>
         <ul>
             <h3>Links</h3>
-            <a target="_blank" class="nav-link animate__animated animate__fadeIn" href="https://linktr.ee/callmerendani">Linktree</a>
-            <a target="_blank" class="nav-link animate__animated animate__fadeIn" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
-            <a target="_blank" class="nav-link animate__animated animate__fadeIn" href="https://github.com/manugeni">GitHub</a>
+            <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani"><i class="fas fa-link"></i> Linktree</a>
+            <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"><i class="fas fa-heart"></i> Sponsor Me</a>
+            <a target="_blank" class="nav-link" href="https://github.com/manugeni"><i class="fab fa-github"></i> GitHub</a>
             <h3>Apps</h3>
-            <a class="nav-link animate__animated animate__fadeIn" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+            <a class="nav-link" href="/pages/apps/corebell-engine/"><i class="fas fa-cogs"></i> Corebell Engine</a>
         </ul>
     </footer>
     <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 
     <script>
-        // Array of static quotes
-        const quotes = [
-            { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" },
-            { text: "Innovation distinguishes between a leader and a follower.", author: "Steve Jobs" },
-            { text: "Stay hungry, stay foolish.", author: "Steve Jobs" },
-            { text: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" },
-            { text: "Code is like humor. When you have to explain it, it's bad.", author: "Cory House" }
-        ];
-
-        // Array of fun facts
-        const facts = [
-            "The first computer programmer was a woman named Ada Lovelace.",
-            "The first computer mouse was made of wood.",
-            "The first website is still online today.",
-            "The term 'bug' in computing came from an actual moth.",
-            "JavaScript was created in just 10 days."
-        ];
-
-        // Function to display random quote
-        function displayRandomQuote() {
-            const randomQuote = _.sample(quotes);
-            const quoteElement = document.getElementById('static-quote');
-            quoteElement.innerHTML = `"${randomQuote.text}"<br><span style="color: #666;">- ${randomQuote.author}</span>`;
-        }
-
-        // Function to display random facts
-        function displayRandomFacts() {
-            const factsDisplay = document.getElementById('facts-display');
-            const randomFacts = _.sampleSize(facts, 3); // Get 3 random facts
-            
-            factsDisplay.innerHTML = randomFacts.map(fact => 
-                `<div class="fact" style="margin: 10px; padding: 15px; background: #f5f5f5; border-radius: 8px;">
-                    ${fact}
-                </div>`
-            ).join('');
-        }
-
-        // Initialize content when DOM is loaded
-        document.addEventListener('DOMContentLoaded', () => {
-            displayRandomQuote();
-            displayRandomFacts();
-
-            // Change content periodically
-            setInterval(displayRandomQuote, 10000); // Change quote every 10 seconds
-            setInterval(displayRandomFacts, 15000); // Change facts every 15 seconds
-        });
-
         // Mobile menu toggle
         document.querySelector('.nav-toggle').addEventListener('click', function() {
-            const navMenu = document.querySelector('.nav-menu');
-            navMenu.style.display = navMenu.style.display === 'block' ? 'none' : 'block';
+            const menu = document.querySelector('.nav-menu');
+            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
         });
     </script>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-link {
-            text-decoration: none;
-            color: #333;
-            margin: 0 10px;
-            transition: color 0.3s ease;
-        }
-
-        .nav-link:hover {
-            color: #007bff;
-        }
-
-        .nav-toggle {
-            display: none;
-            cursor: pointer;
-            font-size: 1.5rem;
-        }
-
-        .facts-container .fact {
-            transition: transform 0.3s ease;
-        }
-
-        .facts-container .fact:hover {
-            transform: scale(1.02);
-        }
-
-        .image-gallery img {
-            transition: transform 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .image-gallery img:hover {
-            transform: scale(1.05);
-        }
-
-        @media (max-width: 768px) {
-            .nav-toggle {
-                display: block;
-            }
-
-            .nav-menu {
-                display: none;
-                width: 100%;
-                position: absolute;
-                top: 60px;
-                left: 0;
-                background: white;
-                padding: 1rem;
-                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            }
-
-            .nav-menu a {
-                display: block;
-                margin: 10px 0;
-            }
-        }
-    </style>
 </body>
-    </html>
+</html>
