--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
         </a>
         <div class="nav-menu">
-            <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+            <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
             <a class="nav-link" href="/pages/blog/">Blog</a>
         </div>
         <div class="nav-toggle">&#9776;</div>
@@ -95,7 +95,7 @@
             <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"><i class="fas fa-heart"></i> Sponsor Me</a>
             <a target="_blank" class="nav-link" href="https://github.com/manugeni"><i class="fab fa-github"></i> GitHub</a>
             <h3>Apps</h3>
-            <a class="nav-link" href="/pages/apps/corebell-engine/"><i class="fas fa-cogs"></i> Corebell Engine</a>
+            <a class="nav-link" href="/apps/corebell/"><i class="fas fa-cogs"></i> Corebell Engine</a>
         </ul>
     </footer>
     <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
