--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
     <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
     <a target="_blank" class="nav-link" href="https://github.com/manugeni">GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
