--- a/data/index.html
+++ b/data/index.html
@@ -16,7 +16,7 @@
     <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
     <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+    <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
