--- a/data/js/index.html
+++ b/data/js/index.html
@@ -12,11 +12,11 @@
 <footer>
     <ul>
     <h3>All links</h3>
-    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
+    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"> | Sponsor</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni"> | GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+    <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
