--- a/data/index.html
+++ b/data/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Access violated. | Corebell</title>
+    <title>Access prohibited. | Rendani</title>
 </head>
 <body>
     <h1 style="text-align: center; font-size: xxx-large;">You CANNOT access this directory.</h1>
@@ -12,12 +12,12 @@
 <footer>
     <ul>
     <h3>All links</h3>
-    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
+    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"> | Sponsor</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni"> | GitHub</a>
     <h3>Apps</h3>
     <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </html>
