--- a/data/js/index.html
+++ b/data/js/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Access violated. | Corebell</title>
+    <title>Access prohibited. | Rendani</title>
 </head>
 <body>
     <h1 style="text-align: center; font-size: xxx-large;">You CANNOT access this directory.</h1>
@@ -19,5 +19,5 @@
     <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </html>
