--- a/apps/index.html
+++ b/apps/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Access not available yet. | Corebell</title>
+    <title>Access prohibited. | Rendani</title>
 </head>
 <body>
-    <h1 style="text-align: center; font-size: xxx-large;">Apps is NOT accessible yet.</h1>
+    <h1 style="text-align: center; font-size: xxx-large;">You CANNOT access this directory.</h1>
 </body>
 <footer>
     <ul>
-    <h3>Links</h3>
-    <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani">Linktree</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/manugeni">GitHub</a>
+    <h3>All links</h3>
+    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"> | Sponsor</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni"> | GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/apps/corebell/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
