--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <footer>
         <ul>
             <h3>Links</h3>
-            <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani"><i class="fas fa-link"></i> Linktree</a>
-            <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"><i class="fas fa-heart"></i> Sponsor Me</a>
+            <a target="_blank" class="nav-link" href="mailto=rendaniman@outlook.com"><i class="fas fa-mail"></i> Email</a>
+            <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni"><i class="fas fa-heart"></i> Sponsor</a>
             <a target="_blank" class="nav-link" href="https://github.com/manugeni"><i class="fab fa-github"></i> GitHub</a>
             <h3>Apps</h3>
             <a class="nav-link" href="/apps/corebell/"><i class="fas fa-cogs"></i> Corebell Engine</a>
