--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -41,7 +41,7 @@
 <body>
   <div id="viewport" style="width: 100vw; height: 100vh;"></div>
   <div id="controls">
-    <h3>Corebell Engine</h3>
+    <h3>Corebell Engine <sub style="font-size: x-small; color: grey;">(v0.002)</sub></h3>
     <button id="addCube">Add Cube</button>
     <button id="addSphere">Add Sphere</button>
     <button id="addCylinder">Add Cylinder</button>
