--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/data/images/favicon.png">
+  <link rel="stylesheet" href="/data/css/main.css">
   <title>Interface | Corebell Engine</title>
   <style>
     body {
@@ -43,7 +45,7 @@
 <body>
   <div id="viewport" style="width: 100vw; height: 100vh;"></div>
   <div id="controls">
-    <h3>Corebell Engine <sub style="font-size: x-small; color: grey;">(v0.0.002)</sub></h3>
+    <h3>Corebell (3D Engine) <sub style="font-size: x-small; color: grey;">(v0.0.002)</sub></h3>
     <button id="addCube">Add Cube</button>
     <button id="addSphere">Add Sphere</button>
     <button id="addCylinder">Add Cylinder</button>
