--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
             </p>
             <p style="margin: 10px 0;">
                 <span style="display: inline-block; width: 80px;">X:</span>
-                <a href="https://twitter.com/callmerendani" target="_blank" class="nav-link"><i class="fab fa-twitter"></i> @callmerendani</a>
+                <a href="https://twitter.com/callmerendani" target="_blank" class="nav-link"><i class="fab fa-twitter"></i> callmerendani</a>
             </p>
             <p style="margin: 10px 0;">
                 <span style="display: inline-block; width: 80px;">GitHub:</span>
-                <a href="https://github.com/manugeni" target="_blank" class="nav-link"><i class="fab fa-github"></i> @manugeni</a>
-            </p>
-            <p style="margin: 10px 0;">
-                <span style="display: inline-block; width: 80px;">LinkedIn:</span>
-                <a href="https://linkedin.com/in/rendani-manugeni" target="_blank" class="nav-link"><i class="fab fa-linkedin"></i> /in/rendani-manugeni</a>
+                <a href="https://github.com/manugeni" target="_blank" class="nav-link"><i class="fab fa-github"></i> manugeni</a>
             </p>
         </div>
     </div>
