--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -74,11 +74,7 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/postprocessing/RenderPass.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/postprocessing/BloomPass.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/postprocessing/SSAOPass.js"></script>
-  <!-- Corebell Engine -->
-  <script src="sceneManager.js" type="module"></script>
-  <script src="controlsManager.js" type="module"></script>
-  <script src="postProcessing.js" type="module"></script>
-  <script src="utils.js" type="module"></script>
-  <script src="corebell.js" type="module"></script>
+
+  <script src="corebell.js"></script>
 </body>
 </html>
