--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -51,6 +51,6 @@
         <button onclick="engine.saveScene()">Save Scene</button>
         <input type="file" id="loadSceneInput" onchange="engine.loadScene(this.files[0])">
     </div>
-    <script src="corebell"></script>
+    <script src="corebell.js"></script>
 </body>
 </html>
