--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script defer src="/data/js/main.js"></script>
     <title>Explore | Rendani</title>
+    <style>
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+        .favorites-grid img {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
