--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -3,88 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interface | Corebell (1.0)</title>
-    <link rel="icon" href="/data/images/favicon.png">
+    <meta name="description" content="Corebell Engine Interface - 3D Scene Editor">
+    <title>Interface Corebell Engine (0.2.0)</title>
+    <link rel="icon" href="/assets/favicon.png">
+    
+    <!-- Third-party libraries -->
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
+    
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-            background: #1e1e1e;
-            color: #ddd;
+        :root {
+            --primary-color: #2a2a2a;
+            --secondary-color: #3a3a3a;
+            --accent-color: #4a90e2;
+            --text-color: #ffffff;
+            --sidebar-width: 250px;
+            --header-height: 60px;
         }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+            background: var(--primary-color);
+            color: var(--text-color);
+            overflow: hidden;
+            line-height: 1.6;
+        }
+
         .header {
-            display: flex;
-            align-items: center;
-            padding: 10px 20px;
-            background: #222;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            z-index: 2;
+            right: 0;
+            height: var(--header-height);
+            background: var(--secondary-color);
+            display: flex;
+            align-items: center;
+            padding: 0 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            z-index: 100;
         }
-        .header img {
+
+        .header__logo {
             height: 40px;
             margin-right: 15px;
         }
-        .header h2 {
-            margin: 0;
-            font-size: 20px;
-            color: #fff;
+
+        .header__title {
+            font-size: 1.25rem;
+            font-weight: 500;
         }
-        #canvasContainer {
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100vw;
-            height: calc(100vh - 60px);
+
+        .main-container {
+            display: flex;
+            height: 100vh;
+            padding-top: var(--header-height);
         }
-        canvas {
+
+        .sidebar {
+            width: var(--sidebar-width);
+            background: var(--secondary-color);
+            padding: 20px;
+            overflow-y: auto;
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .viewport {
+            flex-grow: 1;
+            position: relative;
+            background: #000;
+        }
+
+        .canvas-container {
             width: 100%;
             height: 100%;
-            display: block;
         }
-        .sidebar {
-            position: fixed;
-            top: 70px;
-            left: 10px;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 15px;
-            border-radius: 5px;
-            width: 160px;
-            z-index: 2;
-        }
-        .sidebar button,
-        .sidebar input[type='range'] {
-            display: block;
-            margin: 8px 0;
-            padding: 8px;
+
+        #renderCanvas {
             width: 100%;
+            height: 100%;
+            touch-action: none;
+        }
+
+        .control-group {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+        }
+
+        .control-group__title {
+            font-size: 0.9rem;
+            font-weight: 500;
+            margin-bottom: 10px;
+            color: var(--accent-color);
+        }
+
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 8px 12px;
+            margin: 5px 0;
+            background: var(--accent-color);
             border: none;
-            border-radius: 3px;
+            border-radius: 4px;
+            color: white;
+            font-size: 0.9rem;
             cursor: pointer;
-            font-size: 14px;
-            background: #333;
-            color: #fff;
+            transition: background 0.2s ease;
         }
-        .sidebar button:hover {
-            background: #555;
+
+        .btn:hover {
+            background: #357abd;
         }
-        .sidebar label {
-            font-size: 12px;
-            margin-top: 10px;
+
+        .btn--danger {
+            background: #dc3545;
+        }
+
+        .btn--danger:hover {
+            background: #bd2130;
+        }
+
+        .control-label {
+            display: block;
+            margin: 10px 0 5px;
+            font-size: 0.85rem;
             color: #ccc;
+        }
+
+        .range-input {
+            width: 100%;
+            margin: 5px 0;
+        }
+
+        .file-input {
+            display: none;
+        }
+
+        .file-input-label {
+            display: inline-block;
+            padding: 8px 12px;
+            background: var(--accent-color);
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            text-align: center;
+            margin: 5px 0;
+        }
+
+        .shortcuts {
+            margin-top: 20px;
+            font-size: 0.8rem;
+            color: #888;
+        }
+
+        .shortcuts__title {
+            color: #ccc;
+            margin-bottom: 5px;
+        }
+
+        .shortcuts__list {
+            list-style: none;
+        }
+
+        .shortcuts__item {
+            margin: 3px 0;
+        }
+
+        .shortcuts__key {
+            display: inline-block;
+            padding: 2px 6px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 3px;
+            margin-right: 5px;
+        }
+
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 200px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="header">
         <img src="/data/images/CorebellEngine_Logo.png" alt="Corebell Logo">
-        <h2>Interface | Corebell (1.0)</h2>
+        <h2>Interface | Corebell (0.2.0)</h2>
     </div>
     <div id="canvasContainer">
         <canvas id="renderCanvas"></canvas>
