--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -454,7 +454,7 @@
 
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js"></script>
-    <script src="corebell-engine.js"></script>
+    <script src="corebell.js"></script>
     <script>
         // Initialize Engine
         let engine;
