--- a/apps/corebell/index.html
+++ b/apps/corebell/index.html
@@ -277,7 +277,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header__brand">
-                <img src="/assets/logo.png" alt="Corebell Logo" class="header__logo">
+                <img src="/data/imgaes/CorebellEngine_Logo.png" alt="Corebell Logo" class="header__logo">
                 <h1 class="header__title">Corebell Engine 3.0</h1>
             </div>
             <div class="header__controls">
