--- a/pages/services/index.html
+++ b/pages/services/index.html
@@ -199,8 +199,6 @@
     </header>
 
     <main class="container">
-            [Previous HTML head and style sections remain exactly the same...]
-
 <div class="service-card">
                 <div class="service-image">
                     <i class="fas fa-code"></i>
@@ -251,12 +249,36 @@
                     <a href="#" class="btn">Explore Software</a>
                 </div>
             </div>
-
-[Rest of the HTML remains exactly the same...]
     </main>
 
     <footer>
-        <p>2025 &copy; Rendani Manugeni.</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Links</h3>
+                <div class="footer-links">
+                    <a href="mailto:rendaniman@outlook.com" class="nav-link">
+                        <i class="fas fa-envelope"></i> Email
+                    </a>
+                    <a href="https://github.com/sponsors/manugeni" class="nav-link">
+                        <i class="fas fa-heart"></i> Sponsor
+                    </a>
+                    <a href="https://github.com/manugeni" class="nav-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Apps</h3>
+                <div class="footer-links">
+                    <a href="/apps/corebell/" class="nav-link">
+                        <i class="fas fa-cogs"></i> Corebell Engine
+                    </a>
+                </div>
+            </div>
+        </div>
+        <p class="text-center" style="margin-top: 2rem; text-align: center;">
+            2025 © Rendani Manugeni.
+        </p>
     </footer>
 </body>
 </html>
