--- a/pages/services/index.html
+++ b/pages/services/index.html
@@ -187,7 +187,7 @@
             <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo" loading="lazy">
         </a>
         <div class="nav-menu">
-            <a href="/apps/corebell/" class="nav-link">Corebell Engine</a>
+            <a href="/apps/corebell-emgine/" class="nav-link">Corebell Engine</a>
             <a href="/pages/services/">Services</a>
             <a href="/pages/blog/" class="nav-link">Blog</a>
         </div>
